Ensure the borders collapse collectly when props are not included

--- a/packages/react-devtools-shared/src/devtools/views/Components/InspectedElementBadges.css
+++ b/packages/react-devtools-shared/src/devtools/views/Components/InspectedElementBadges.css
@@ -6,3 +6,7 @@
 .Root *:not(:first-child) {
   margin-left: 0.25rem;
 }
+
+.InspectedElementBadgesContainer {
+  padding: 0.25rem;
+}
